--- a/springboot-web/src/main/resources/application.properties
+++ b/springboot-web/src/main/resources/application.properties
@@ -7,3 +7,26 @@ spring.datasource.max-active=20
 spring.datasource.max-idle=8
 spring.datasource.min-idle=8
 spring.datasource.initial-size=10
+
+####################### thymeleaf 配置 #################################
+# 这个开发配置为false，避免改了模板还要重启服务器
+spring.thymeleaf.cache=false
+# 这个是配置模板路径的，默认就是templates，可不用配置
+spring.thymeleaf.prefix=classpath:/templates/
+# 这个可以不配置，检查模板位置
+spring.thymeleaf.check-template-location=true
+# 下面3个不做解释了，可以不配置
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+# 模板的模式
+spring.thymeleaf.mode=HTML5
+
+
+####################### Velocity 配置 (sspringboot1.5.x 以上版本已经弃用Velocity模板) #################################
+spring.velocity.charset=UTF-8
+spring.velocity.properties.input.encoding=UTF-8
+spring.velocity.properties.output.encoding=UTF-8
+spring.velocity.resourceLoaderPath=classpath:/templates/
+spring.velocity.check-template-location=true
+spring.velocity.suffix=.vm
